# how-to-fly

./: Cargo.toml  package-lock.json  readme.md
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml  LICENSE
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  eye.rs  lib.rs
www/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
www/src/: App.tsx  main.js  style.css
